错误捕获 读取图片

--- a/views/login.html
+++ b/views/login.html
@@ -1,1 +1,11 @@
-登陆界面
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <h2>登陆界面</h2>
+    <img src="./showImg" alt="">
+</body>
+</html>
