--- a/views/login.html
+++ b/views/login.html
@@ -6,6 +6,22 @@
 </head>
 <body>
     <h2>登陆界面</h2>
-    <img src="./showImg" alt="">
+    <p>收到参数:email是{email}</p>
+    <img style="width: 500px;" src="./showImg" alt="">
+    <form action="./login" method="post">
+        <table align="center">
+            <tr>
+                <td>email</td>
+                <td><input type="text" name="email"></td>
+            </tr>
+            <tr>
+                <td>密码:</td>
+                <td><input type="password" name="pwd"></td>
+            </tr>
+            <tr>
+                <td><input type="submit" value="登录"></td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
